Retnings og fremdrifts enhed version psoc 5/Retning_psoc_5/I2C_Slave_prog.cydsn/CortexM3/ARM_GCC_493/Debug/REBUILD.log
--------------- Rebuild Started: 11/19/2016 13:52:40 Project: I2C_Slave_prog, Configuration: ARM GCC 4.9-2015-q1-update Debug ---------------
Deleting file ".\I2C_Slave_prog.cycdx"
Deleting file ".\I2C_Slave_prog.svd"
Deleting file ".\I2C_Slave_prog.rpt"
Deleting file ".\I2C_Slave_prog_timing.html"
cydsfit.exe -.appdatapath "C:\Users\Anders\AppData\Local\Cypress Semiconductor\PSoC Creator\4.0" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\Anders\Desktop\Projekt 4. semester\E4PRJ4-Gruppe1\Retnings og fremdrifts enhed version psoc 5\Retning_psoc_5\I2C_Slave_prog.cydsn\I2C_Slave_prog.cyprj" -d CY8C5868LTI-LP039 -s "C:\Users\Anders\Desktop\Projekt 4. semester\E4PRJ4-Gruppe1\Retnings og fremdrifts enhed version psoc 5\Retning_psoc_5\I2C_Slave_prog.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
ADD: pft.M0040: information: The following 6 pin(s) will be assigned a location by the fitter: A(0), B(0), C(0), D(0), SCL_1(0), SDA_1(0)
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_493\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -Og -ffat-lto-objects -c main.c -o .\CortexM3\ARM_GCC_493\Debug\main.o
main.c: In function 'main':
main.c:26:5: warning: implicit declaration of function 'I2CS_I2CSlaveInitReadBuf' [-Wimplicit-function-declaration]
     I2CS_I2CSlaveInitReadBuf (i2cReadBuffer,  BUFFER_SIZE);
     ^
main.c:27:5: warning: implicit declaration of function 'I2CS_I2CSlaveInitWriteBuf' [-Wimplicit-function-declaration]
     I2CS_I2CSlaveInitWriteBuf(i2cWriteBuffer, BUFFER_SIZE);
     ^
main.c:40:9: warning: implicit declaration of function 'I2CS_I2CSlaveStatus' [-Wimplicit-function-declaration]
         if (0u != (I2CS_I2CSlaveStatus() & I2CS_I2C_SSTAT_WR_CMPLT))
         ^
main.c:40:44: error: 'I2CS_I2C_SSTAT_WR_CMPLT' undeclared (first use in this function)
         if (0u != (I2CS_I2CSlaveStatus() & I2CS_I2C_SSTAT_WR_CMPLT))
                                            ^
main.c:40:44: note: each undeclared identifier is reported only once for each function it appears in
main.c:43:13: warning: implicit declaration of function 'I2CS_I2CSlaveGetWriteBufSize' [-Wimplicit-function-declaration]
             if (PACKET_SIZE == I2CS_I2CSlaveGetWriteBufSize())
             ^
main.c:55:13: warning: implicit declaration of function 'I2CS_I2CSlaveClearWriteBuf' [-Wimplicit-function-declaration]
             I2CS_I2CSlaveClearWriteBuf();
             ^
main.c:56:13: warning: implicit declaration of function 'I2CS_I2CSlaveClearWriteStatus' [-Wimplicit-function-declaration]
             (void) I2CS_I2CSlaveClearWriteStatus();
             ^
main.c:64:44: error: 'I2CS_I2C_SSTAT_RD_CMPLT' undeclared (first use in this function)
         if (0u != (I2CS_I2CSlaveStatus() & I2CS_I2C_SSTAT_RD_CMPLT))
                                            ^
main.c:67:13: warning: implicit declaration of function 'I2CS_I2CSlaveClearReadBuf' [-Wimplicit-function-declaration]
             I2CS_I2CSlaveClearReadBuf();
             ^
main.c:68:13: warning: implicit declaration of function 'I2CS_I2CSlaveClearReadStatus' [-Wimplicit-function-declaration]
             (void) I2CS_I2CSlaveClearReadStatus();
             ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 11/19/2016 13:52:48 ---------------
